[package]
name = "qdrant-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
qdrant-client = "1.3.0"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
dotenv = "0.15.0"