[package]
name = "qdrant-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
qdrant-client = "1.12.1"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
